--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,7 +23,7 @@
 	}
 
 	body {
-		line-height: 1;
+		line-height: 2;
 	}
 
 	ol, ul {
@@ -1606,6 +1606,8 @@
 	}
 
 	p {
+		color: black;
+		font-size: 20px;
 		margin: 0 0 2em 0;
 	}
 
